--- a/Assignment03/package.json
+++ b/Assignment03/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "classnames": "^2.2.3",
     "meteor-node-stubs": "~0.2.0",
+    "moment": "^2.13.0",
     "react": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
     "react-dom": "^15.0.1",
