--- a/Assignment03/package.json
+++ b/Assignment03/package.json
@@ -10,6 +10,8 @@
     "moment": "^2.13.0",
     "react": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
+    "react-bootstrap": "^0.29.0",
+    "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^15.0.1",
     "react-router": "^2.2.2"
   }
